# SO2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
board/: Board.cpp  Board.h
car/: Car.cpp  Car.h
raft/: Raft.cpp  Raft.h
shared/: CarsHolder.h  SharedResources.h
